--- a/spud/templates/spud/search_detail.html
+++ b/spud/templates/spud/search_detail.html
@@ -9,9 +9,7 @@
 {% block title %}Search results{% endblock %}
 
 {% block content %}
-{% pagination page_obj %}
-
-<h1>Search results</h1>
+<h1>Search results page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</h1>
 
 <dl class="infobox">
 {% for criteria in object.criteria %}
