Use "large" image instead of "hd" as images aren't really hd.

--- a/spud/templates/spud/photo_detail.html
+++ b/spud/templates/spud/photo_detail.html
@@ -30,7 +30,7 @@
 <div class='photo_detail photo_{{object.status}}'>
 <div class='photo_detail_photo'>
 
-<a href="{% get_thumb_url object "hd" %}">
+<a href="{% get_thumb_url object "large" %}">
 <img src="{% get_thumb_url object "mid" %}" alt="{{ object.title }}" />
 </a>
 </div>
