--- a/spud/templates/spud/photo_edit.html
+++ b/spud/templates/spud/photo_edit.html
@@ -18,7 +18,13 @@
 <input type="submit" name="queer" value="{{ queer.name }}"/>
 {% endfor %}
 
-<div class='photo_detail photo_{{object.status}}'>
+{% if object.action %}
+<ul class="messagelist">
+<li>Marked action: {% show_action_with_link object.action %}</li>
+</ul>
+{% endif %}
+
+<div class='photo_detail photo_{{object.action}}'>
 <div class='photo_detail_photo'>
 
 <a href="{{ object.get_orig_url }}">
@@ -107,7 +113,7 @@
 </dd>
 {% endif %}
 {% endif %}
-<dt>Status</dt><dd>{% show_status_with_link object.status %}</dd>
+<dt>Action</dt><dd>{% show_action_with_link object.action %}</dd>
 </dl>
 </div>
 
