--- a/spud/templates/spud/album_detail.html
+++ b/spud/templates/spud/album_detail.html
@@ -36,11 +36,21 @@
 
 {%ifequal page_obj.number 1 %}
 {% if object.children.all %}
-    <ul class="children">
+<div class="children">
+    <ul class="photo_list">
     {% for album in object.children.all %}
-        <li><a href="{{ album.get_absolute_url }}">{{ album }}</a>{% if album.album_description %}: {{album.album_description|urlizetrunc:40|truncatewords:10}}{% endif %} {% if album.sortname %}({{album.sortname}} {{album.sortorder}}){% endif %}</li>
+        <li class='photo_list_item' onClick='parent.location="{{ album.get_absolute_url }}"'>
+            <a href="{{ album.get_absolute_url }}">
+                {% with album.get_cover_photo as photo %}{% if photo %}<img src='{% get_thumb_url photo "thumb" %}' alt=''/><br/>{% endif %}{% endwith %}
+                <div class='title'>{{ album }}</div>
+            </a>
+            {% if album.sortname %}<div class='sort'>({{album.sortname}} {{album.sortorder}})</div>{% endif %}
+            {% if album.album_description %}<div class='desc' onClick='parent.location="{{ album.get_absolute_url }}"'>{{album.album_description|urlizetrunc:20}}</div>{% endif %}
+        </li>
     {% endfor %}
+    <br class="clear"/>
     </ul>
+</div>
 {% endif %}
 {% endifequal %}
 
