--- a/spud/templates/spud/album_list.html
+++ b/spud/templates/spud/album_list.html
@@ -15,11 +15,12 @@
 {% if page_obj.object_list %}
   <table>
     <thead>
-      <tr><th>Album</th><th>Last Revised</th></tr>
+      <tr><th>Cover</th><th>Album</th><th>Last Revised</th></tr>
     </thead>
     <tbody>
       {% for album in page_obj.object_list %}
         <tr>
+        {% with album.get_cover_photo as photo %}<td>{% if photo %}<img src='{% get_thumb_url photo "thumb" %}' alt=''/>{% endif %}</td>{% endwith %}
         <td><a href="{{ album.get_absolute_url }}">{{ album }}</a></li></td>
         <td>{{ album.revised }}</td>
         </tr>
