--- a/spud/templates/spud/show_photo_list.html
+++ b/spud/templates/spud/show_photo_list.html
@@ -1,15 +1,17 @@
 {% load i18n %}
 {% load photo %}
 
-<div class='spud'><ul class='photo_list'>
+<ul class='photo_list'>
 
 {% for photo in page_obj.object_list %}
-<li class='photo_list_item photo_{{photo.action}}'>
-<a href='{% photo_detail_url_by_page links page_obj forloop.counter0 %}'><img src='{% get_thumb_url photo "thumb" %}' alt='{{photo}}'/></a>
-<div class='title'>{{photo}}</div>
+<li class='photo_list_item photo_{{photo.action}}' onClick='parent.location="{% photo_detail_url_by_page links page_obj forloop.counter0 %}"'>
+<a href='{% photo_detail_url_by_page links page_obj forloop.counter0 %}'><img src='{% get_thumb_url photo "thumb" %}' alt='{{photo}}'/>
+<div class='title'>{{photo}}</div></a>
+<div class='sort'>{{ photo.datetime|show_date:photo.timezone }}</div>
+{% if photo.description %}<div class='desc'>{{photo.description|urlizetrunc:20}}</div>{% endif %}
 </li>
 {% endfor %}
 
-</ul></div>
-
 <br class="clear"/>
+</ul>
+
