--- a/spud/templates/spud/photo_detail.html
+++ b/spud/templates/spud/photo_detail.html
@@ -33,7 +33,7 @@
 {% if edit_perm %}<li><a class="linklink" href="{{ object.get_orig_url }}">Orig</a></li>{% endif %}
 </ul>
 
-<div class='photo_detail photo_{{object.action}}'>
+<div class='photo_detail {{object.get_style}}'>
 <div class='photo_detail_photo'>
 
 <a href="{% get_thumb_url object "large" %}">
