--- a/spud/templates/spud/category_detail.html
+++ b/spud/templates/spud/category_detail.html
@@ -15,24 +15,9 @@
 {% block content %}
 <h1>{{object}} page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</h1>
 
-{% if object %}
-{% get_permissions_from_type "add_perm" "edit_perm" "delete_perm" user object.type %}
-{% if add_perm or edit_perm or delete_perm %}
-<ul class="object-tools">
-{% if add_perm %}
-<li><a class="addlink" href="{{ object.get_create_url }}">Create</a></li>
-{% endif %}
-{% if edit_perm %}
-<li><a class="changelink" href="{{ object.get_edit_url }}">Edit</a></li>
-{% endif %}
-{% if delete_perm %}
-<li><a class="deletelink" href="{{ object.get_delete_url }}">Delete</a></li>
-{% endif %}
-</ul>
-{% endif %}
+{% show_view_buttons web user object %}
 
 {% if object.category_description %}<p>{{object.category_description|urlizetrunc:40|linebreaks}}</p>{% endif %}
-{% endif %}
 
 {%ifequal page_obj.number 1 %}
 {% if object.children.all %}
@@ -54,9 +39,9 @@
 {% endif %}
 {% endifequal %}
 
-{% show_photo_list page_obj links %}
+{% show_photo_list page_obj web object %}
 
-{% pagination page_obj %}
+{% pagination page_obj web %}
 
 <h2>Search</h2>
 
