--- a/spud/templates/spud/place_detail.html
+++ b/spud/templates/spud/place_detail.html
@@ -15,21 +15,7 @@
 {% block content %}
 <h1>{{object}} page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</h1>
 
-{% if object %}
-{% get_permissions_from_type "add_perm" "edit_perm" "delete_perm" user object.type %}
-{% if add_perm or edit_perm or delete_perm %}
-<ul class="object-tools">
-{% if add_perm %}
-<li><a class="addlink" href="{{ object.get_create_url }}">Create</a></li>
-{% endif %}
-{% if edit_perm %}
-<li><a class="changelink" href="{{ object.get_edit_url }}">Edit</a></li>
-{% endif %}
-{% if delete_perm %}
-<li><a class="deletelink" href="{{ object.get_delete_url }}">Delete</a></li>
-{% endif %}
-</ul>
-{% endif %}
+{% show_view_buttons web user object %}
 
 {%ifequal page_obj.number 1 %}
 <dl class="infobox">
@@ -73,14 +59,12 @@
 {% if object.children.all %}
 <div class="children">
     <ul class="photo_list">
-    {% for album in object.children.all %}
-        <li class='photo_list_item' onClick='parent.location="{{ album.get_absolute_url }}"'>
-            <a href="{{ album.get_absolute_url }}">
-                {% with album.get_cover_photo as photo %}{% if photo %}<img src='{% get_thumb_url photo "thumb" %}' alt=''/><br/>{% endif %}{% endwith %}
-                <div class='title'>{{ album }}</div>
+    {% for place in object.children.all %}
+        <li class='photo_list_item' onClick='parent.location="{% get_view_url place %}"'>
+            <a href="{% get_view_url place %}">
+                {% with place.get_cover_photo as photo %}{% if photo %}<img src='{% get_thumb_url photo "thumb" %}' alt=''/><br/>{% endif %}{% endwith %}
+                <div class='title'>{{ place }}</div>
             </a>
-            {% if album.sortname %}<div class='sort'>({{album.sortname}} {{album.sortorder}})</div>{% endif %}
-            {% if album.album_description %}<div class='desc' onClick='parent.location="{{ album.get_absolute_url }}"'>{{album.album_description|urlizetrunc:20}}</div>{% endif %}
         </li>
     {% endfor %}
     <br class="clear"/>
@@ -88,11 +72,10 @@
 </div>
 {% endif %}
 {% endifequal %}
-{% endif %}
 
-{% show_photo_list page_obj links %}
+{% show_photo_list page_obj web object %}
 
-{% pagination page_obj %}
+{% pagination page_obj web %}
 
 <h2>Search</h2>
 
