--- a/spud/templates/spud/search_detail.html
+++ b/spud/templates/spud/search_detail.html
@@ -11,15 +11,17 @@
 {% block content %}
 <h1>Search results page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</h1>
 
+{% show_view_buttons web user object %}
+
 <dl class="infobox">
-{% for criteria in object.criteria %}
-<dt>{{criteria.key}}</dt>
-<dd>{{criteria.value}}</dd>
+{% for bit in criteria %}
+<dt>{{bit.key}}</dt>
+<dd>{{bit.value}}</dd>
 {% endfor %}
 </dl>
 
-{% show_photo_list page_obj links %}
+{% show_photo_list page_obj web object %}
 
-{% pagination page_obj %}
+{% pagination page_obj web %}
 
 {% endblock %}
