Get rid of company name.

--- a/photos/templates/base_site.html
+++ b/photos/templates/base_site.html
@@ -4,7 +4,7 @@
 {% block title %}{{ title|escape }} | {% trans 'site admin' %}{% endblock %}
 
 {% block branding %}
-<h1 id="site-name">{% trans 'Microcom Australia Photos' %}</h1>
+<h1 id="site-name">{% trans 'Photos' %}</h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
